<resources>
    <string name="app_name">@string/app_name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_to_firmli_s_staff">Login</string>
    <string name="please_enter_your_credentials_to_securely_log_in_to_your_firmli_s_staff_account">Fill details to proceed.</string>
    <string name="email">Email</string>
    <string name="example_frimli_com">Enter your email id</string>
    <string name="base_url">https://c101b24stone10-api.firmli.com/v1/</string>
    <string name="base_url_image">https://grapes-store.firmli.com/v1/</string>
    <string name="fiClientNumber">C101B24STONE10</string>
    <string name="socket_base_url">https://C101B24STONE10-api.firmli.com</string>
    <string name="fast_acceptance">Fast Acceptance</string>
    <string name="potentialEarned"><font color="#215898">Potential\nEarned </font></string>
    <string name="potentialEarnedInfoSU">This is the potential amount you can earn if all of your students enrol to their selected institutions.</string>
    <string name="preferredLocation"><font color="#344955">IELTS Test Location </font></string>
    <string name="earnedAmount"><font color="#215898">Earned\nAmount </font></string>
    <string name="password">Password</string>
    <string name="hint">***********</string>
    <string name="forgot_passcode">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="by_student_source">By Student Source</string>
    <string name="leads_to_application">Leads to Application</string>
    <string name="insights">Insights</string>
    <string name="copyAndShareCode"><u>Copy &amp; Share Code</u></string>
    <string name="haven_t_received_a_code">Haven’t received a code?</string>
    <string name="byClicking">By Proceeding, you accept our <b><font color='#212121'>Terms &amp; Conditions</font></b> and <b><font color='#212121'>Privacy Policy</font></b>.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_your_registered_email_id">Please enter your registered email ID</string>
    <string name="next">Next</string>
    <string name="verify_otp">Verification</string>
    <string name="a_6_digit_verification_code_has_been_sent_to_n9u738338838">A 6 digit verification code has been sent to \n9738338838</string>
    <string name="verify">Verify</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="dashboard">Dashboard</string>
    <string name="yourProfileIs">Your Profile is <b><font color='#000000'>20% </font></b>Completed, Complete your profile to get better search results.</string>
    <string name="profile">Profile</string>
    <string name="call_logs">Call Logs</string>
    <string name="countryWhereYouWant"><font color='#344955'>Category </font> <font color='#999999'>(Where you want to go?) </font></string>
    <string name="students">Students</string>
    <string name="applications">Applications</string>
    <string name="dashboard1">Dashboard</string>
    <string name="letgetstarted">Let\'s get Started!</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="next_button">Next</string>
    <string name="login_">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?<b>Sign Up</b> </string>
    <string name="mobile_number">Mobile Number</string>
    <string name="fill_details_to_proceed">Fill details to proceed</string>
    <string name="enter_your_password_to_proceed_with_login">Enter your password to proceed with login</string>
    <string name="_8699339451">Enter mobile number</string>
    <string name="don_t_have_an_account_sign_up1">Don\'t have an account? Sign Up</string>
    <string name="email_tab">Email</string>
    <string name="no_webinar_found">No Webinar Found</string>
    <string name="phone_tab">Phone</string>
    <string name="save_and_proceed">Save and Proceed</string>
    <string name="programs">Programs</string>
    <string name="compare">Compare</string>
    <string name="view_comparison">View Comparison</string>
    <string name="community">Community</string>
    <string name="edit_post">Edit Post</string>
    <string name="ok">OK\n</string>
    <string name="cancel">Cancel</string>
    <string name="search_here">Search Here...</string>
    <string name="vikas_kumar">Vikas Kumar</string>
    <string name="_26th_sep_2012">26th Sep 2012</string>
    <string name="student_id_12345">Student Id: 12345</string>
    <string name="_91_7896541235">+91 7896541235</string>
    <string name="vikas_gmail_com">vikas@gmail.com</string>
    <string name="atlantic_business_college_canada">Atlantic Business College</string>
    <string name="intake_may_2023_application_fee_12495_cad">Intake: May 2023 - Application Fee: 12495 CAD</string>
    <string name="loyalist_college_in_toronto_canada">Loyalist College in Toronto, Canada</string>
    <string name="status">Status:</string>
    <string name="started_amp_submitted"><![CDATA[started & Submitted]]></string>
    <string name="Lead_Status">Lead Status:</string>
    <string name="Working"><![CDATA[Working]]></string>
    <string name="chat">Chat</string>
    <string name="qualification_12">Qualification:12</string>
    <string name="be_certified">Be Certified</string>
    <string name="be_certified11">Be Certified</string>
    <string name="no_record_found">No Record Found</string>
    <string name="you_don_t_have_nany_transactions_yet">You don\'t have\nany transactions yet.</string>
    <string-array name="currencies">
        <item>AUD</item>
        <item>CAD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>INR</item>
        <item>NZD</item>
        <item>USD</item>
    </string-array>
    <string-array name="currency_list">
        <item>INR</item> 
        <item>USD</item> 
        <item>EUR</item> 
        <item>JPY</item> 
        <item>GBP</item> 
        <item>AUD</item> 
        <item>CAD</item> 
        <item>CHF</item> 
        <item>CNY</item> 
        <item>HKD</item> 
        <item>NZD</item> 
        <item>SEK</item> 
        <item>KRW</item> 
        <item>SGD</item> 
        <item>NOK</item> 
        <item>MXN</item> 
        <item>RUB</item> 
        <item>ZAR</item> 
        <item>TRY</item> 
        <item>BRL</item> 
        <item>TWD</item> 
        <item>DKK</item> 
        <item>PLN</item> 
        <item>THB</item> 
        <item>IDR</item> 
        <item>HUF</item> 
        <item>CZK</item> 
        <item>ILS</item> 
        <item>AED</item> 
        <item>SAR</item> 
        <item>MYR</item> 
        <item>PHP</item> 
        <item>COP</item> 
        <item>CLP</item> 
        <item>PKR</item> 
        <item>EGP</item> 
        <item>BDT</item> 
        <item>VND</item> 
        <item>NGN</item> 
    </string-array>
    <string-array name="admissionStatus">
        <item>already_on_campus</item>
        <item>received_offer_letter</item>
        <item>waiting_decision</item>
        <item>waitlisted</item>
        <item>yet_to_apply</item>
    </string-array>
    <string-array name="targetIntake">
        <item>AUD</item>
        <item>CAD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>INR</item>
        <item>NZD</item>
        <item>USD</item>
    </string-array>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat
    </string>
    <string name="payments">Payments</string>
    <string name="payment_for">Payment For</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="generate_link">Generate Link</string>
    <string name="mode_of_payment">Mode of Payment</string>
    <string name="applied">Applied</string>
    <string name="bsc_entrepreneurship_and_management">Bsc Entrepreneurship and Management</string>
    <string name="duration_48_months_tution_fee_3500_eur">Duration: 48 months | tution Fee: = 3500 EUR</string>
    <string name="view_details">View Details</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="time">Time</string>
    <string name="select_time">Select Time</string>
    <string name="notes">Notes</string>
    <string name="enter_note">Enter Note..</string>
    <string name="destination_manager">Destination Manager</string>
    <string name="lorem_ispum_is_dummy_text">Lorem Ispum is Dummy Text</string>
    <string name="date_25_july_2024_time_14_30">Date: 25 July 2024 | Time: 14:30</string>
    <string name="disciplines">Disciplines</string>
    <string name="architecture">Architecture</string>
    <string name="graduate">Graduate</string>
    <string name="want_to_study_in">Want to Study In</string>
    <string name="overdue">Overdue</string>
    <string name="write_something_here">Write something here</string>
    <string name="visa_fee">Visa Fee</string>
    <string name="cad_45">CAD $45</string>
    <string name="view_detail"><u>View Details</u></string>
    <string name="change_status"><u>Change Status</u></string>
    <string name="enter_title">Enter Title</string>
    <string name="notess">Notes</string>
    <string name="create_notes">Create Notes</string>
    <string name="_20">20</string>
    <string name="category">category</string>
    <string name="view_review"><u>View Review</u></string>
    <string name="packagename">com.learn.overseas</string>
    <string name="please_contact_to_respective_assigned_staff_for_the_confirmation_of_payment">Please Contact to respective assigned staff for the confirmation of payment</string>
    <string name="please_submit_the_cash_payment_to_the_assigned_staff">Please Submit the cash payment\n to the assigned staff.</string>
    <string name="ensure_to_obtain_a_reciept_for_your_records_thank_you">Ensure to obtain a reciept for your records \n Thank You.</string>
    <string name="do_not_forget_to_update_on_chat_when_you_paid_amount">Do not forget to update on chat when you  \n paid amount.</string>
    <string name="delete_account">Delete Account</string>
    <string name="ambassador">Ambassador</string>
    <string name="no_internet_title">Whoops! \nNo Internet Connection</string>
    <string name="no_internet_message">Make sure wifi or cellular data is \nturned on and then try again.</string>
    <string name="try_again">Try again</string>
    <string name="title_buy_coupon">Buy Coupon</string>
    <string name="course_name">IELTS</string>
    <string name="course_description">The IELTS tests English proficiency for study, work, or migration in English-speaking countries worldwide.</string>
    <string name="unit_price_per_unit">CA$2,000.00 per unit</string>
    <string name="available_voucher">Available Voucher - 315</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="default_quantity">101</string>
    <string name="payment_gateway_required">Payment Gateway *</string>
    <string name="select_gateway">Select</string>
    <string name="buy_now">Buy Now</string>
    <string name="counsellings">Counsellings</string>
    <string name="let_s_get_started">Let\'s get Started!</string>
    <string name="login_to_enjoy_the_features_nwe_have_provided">Login to enjoy the features\nwe have provided.</string>
    <string name="select_as_primary_account">Set  As primary</string>
    <string name="please_select_an_option">Please select an option</string>
</resources>