<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard1" />
    <item
        android:id="@+id/fragProgramAllProg"
        android:icon="@drawable/ic_program"
        android:title="@string/programs" />

    <item
        android:id="@+id/applicationActiveFragment"
        android:icon="@drawable/ic_applications"
        android:title="@string/applications" />



    <item
        android:id="@+id/counsellingFragment2"
        android:icon="@drawable/ic_insights"
        android:title="@string/counsellings" />

    <item
        android:id="@+id/uniteliFragment"
        android:icon="@drawable/ic_community"
        android:visible="true"
        android:title="@string/ambassador" />
</menu>