<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10dp"
    android:background="@drawable/bottom_sheet_back"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/dp_15"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_cross"
            app:tint="@color/disabledTextColor" />

        <TextView
            android:id="@+id/tvApd_programName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/set_reminder"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space10"
        android:layout_marginTop="@dimen/dp_20"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_date_reminder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space50"
        android:layout_marginHorizontal="@dimen/space10"
        android:background="@drawable/shape_rectangle_all_radius_et_login"
        android:padding="@dimen/space10"
        android:focusable="false"
        android:clickable="true"
        android:text="@string/select_date"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space10"
        android:layout_marginTop="@dimen/dp_10"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space50"
        android:layout_marginHorizontal="@dimen/space10"
        android:background="@drawable/shape_rectangle_all_radius_et_login"
        android:padding="@dimen/space10"
        android:focusable="false"
        android:clickable="true"
        android:text="@string/select_time"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space10"
        android:layout_marginTop="@dimen/dp_10"
        android:maxLines="1"
        android:singleLine="true"
        android:focusable="false"
        android:clickable="true"
        android:text="@string/notes"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_notes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space200"
        android:layout_marginHorizontal="@dimen/space10"
        android:background="@drawable/shape_rectangle_all_radius_et_login"
        android:padding="@dimen/space10"
        android:gravity="left"
        android:hint="@string/enter_note"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tvSp2_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_rectangle_all_radius_btn_yellow"
        android:elevation="2dp"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:gravity="center"
        android:foreground="@drawable/ripple"
        android:padding="12dp"
        android:text="@string/set_reminder"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/dp_20"
        android:textColor="@color/white" />

</LinearLayout>
