<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="62dp">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="-20dp"
            android:src="@drawable/logo_red" />

        <TextView
            android:id="@+id/tvObP1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="80dp"
            android:text="@string/let_s_get_started"
            android:textColor="#212121"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_to_enjoy_the_features_nwe_have_provided"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_rectangle_all_radius_btn_primary"
            android:elevation="1dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/shape_rectangle_all_radius_btn_secondary"
            android:elevation="1dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>