<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_200"
    android:layout_marginTop="@dimen/_10dp"
    android:background="@drawable/bottom_sheet_back"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/dp_15"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_cross"
            app:tint="@color/disabledTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            android:textSize="16sp" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/please_select_an_option"
        android:textColor="@color/text_color"
        android:textSize="16sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space1"
        android:layout_marginVertical="@dimen/space5"
        android:background="#D6D7DC" />

    <TextView
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/space10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/space10"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/select_as_primary_account"
        android:textColor="@color/secondary_color"
        android:textSize="16sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space1"
        android:layout_marginVertical="@dimen/space5"
        android:background="#D6D7DC" />

    <TextView
        android:id="@+id/cancel_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/space10"
        android:layout_marginTop="@dimen/dp_10"
        android:clickable="true"
        android:focusable="false"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/cancel"
        android:textColor="@color/red"
        android:textSize="16sp" />


</LinearLayout>
