<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/shape_rectangle_all_radius_btn_primary"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:backgroundTint="#EDFBF0"
        android:background="@drawable/back_int"
        android:layout_height="@dimen/dp_200" />

    <ImageView
        android:layout_width="@dimen/dp_100"
        android:src="@drawable/inter"
        android:layout_gravity="center"
        android:layout_marginTop="-40dp"
        android:layout_height="@dimen/dp_100" />

    <TextView
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_14"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/no_internet_title"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_12"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/no_internet_message"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/btnRetry"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:layout_marginHorizontal="@dimen/dp_100"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_rectangle_all_radius_btn_primary"
        android:elevation="1dp"
        android:backgroundTint="@color/red"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>
